--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@
 
 
 .grid-container div {
-  border: 1px solid lightgray;
+  border: 1px solid darkgray;
   flex-grow: 1;
   height: 10%;
   width: 10%;
@@ -31,6 +31,8 @@
   font-weight: bold;
 }
 
+
+
 /* Contents  */
 
 .mine {
@@ -39,13 +41,22 @@
   background-repeat: no-repeat;
 }
 
-.flag{}
+.visability {
+  display: none;
+  background-color: darkgray;
+}
+
+.flag{
+  background: url('../assets/flag.png');
+  background-size:contain;
+  background-repeat: no-repeat;
+}
 
 
 .blank{}
 
 /* States  */
-
+/* 
 .unrevealed {
   background: grey;
-}
+} */
