--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,8 @@ body {
   font-style: italic
 } 
 
+/* Main game styling */
+
 .page-wrapper {
   display: flex;
   margin-top: 64px;
@@ -81,6 +83,7 @@ body {
   width: 600px;
   align-items: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
+  order: 2
 }
 
 /* cell size based on difficulty level  */
@@ -123,30 +126,42 @@ body {
   align-items: center;
   font-weight: bold;
 }
-.info-board {
-  display: none;
-  justify-content: space-between;
-  margin-bottom: 500px;
-  width: 400px;
-  height: 50px;
-  /* border: 6px inset grey;
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4); */
-  background: transparent;
-  border: solid black;
+
+
+.mine-display{
+  /* border: solid 1px white; */
+  border: 6px outset white;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  border-radius: 5px;
+  width: 50px;
+  order: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  width: 10vw;
+  height: 15vh;
+  margin-right: 150px;
 }
 
-.scoreboard{
-  border: solid black;
-  width: 20%;
-}
-
-.emoji{
-  border: solid black;
-  width: 15%;
-}
 .timer{
-  border: solid black;
-  width: 20%;
+  /* border: solid 1px white; */
+  border: 6px outset;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
+  margin-left: 150px;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  border-radius: 5px;
+  width: 50px;
+  order: 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  width: 10vw;
+  height: 15vh;
 }
 
 
@@ -226,7 +241,7 @@ body {
   }
 
   .winner p{
-    font-size: clamp(16px, 24px, 46px);
+    font-size: clamp(12px, 16px, 24px);
   }
 
 
