--- a/styles/style.css
+++ b/styles/style.css
@@ -118,6 +118,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  min-width: 300px;
+  min-width: 300px;
   height: 600px;
   width: 600px;
   align-items: center;
@@ -168,14 +170,12 @@ body {
 
 
 .mine-display{
-  /* border: solid 1px white; */
   border: 6px outset white;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
   color: white;
   font-family: 'Montserrat', sans-serif;
   border-radius: 5px;
-  min-width: 50px;
-  width: 50px;
+  min-width: 100px;
   order: 1;
   display: flex;
   justify-content: center;
@@ -187,25 +187,27 @@ body {
 }
 
 .timer{
-  /* border: solid 1px white; */
   border: 6px outset;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
   margin-left: 150px;
   color: white;
   font-family: 'Montserrat', sans-serif;
   border-radius: 5px;
-  width: 50px;
   order: 3;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 24px;
+  min-width: 100px;
   width: 10vw;
   height: 15vh;
 }
 
 
-/* Contents  */
+
+
+
+/* In game classes to toggle  */
 
 .mine {
   background: url('../assets/pngegg.png');
@@ -235,7 +237,6 @@ body {
 
 .play-again {
   display: flex;
-  justify-content: center;
 }
 
 .play-again {
@@ -277,14 +278,130 @@ body {
   }
 
   .winner h1 {
-  font-size: clamp(32px, 50px, 72px);
+  font-size: 32px;
   }
 
   .winner p{
-    font-size: clamp(12px, 16px, 24px);
+    font-size: 16px;
   }
 
 
+
+
+  @media (max-width: 600px) {
+  
+    .page-wrapper {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 0;
+      flex-direction: row;
+      height: 85vh;
+      max-width: 85vw;
+      border: solid white;
+    }
+    
+    
+    .grid-container{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      max-width: 300px;
+      max-height: 300px;
+      align-items: center;
+      box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
+    }
+  
+    .mine-display{
+      border: 6px outset white;
+      box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
+      color: white;
+      font-family: 'Montserrat', sans-serif;
+      border-radius: 5px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 16px;
+      max-width: 40px;
+      max-height: 60px;
+    }
+    
+    .timer{
+      border: 6px outset;
+      box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
+      color: white;
+      font-family: 'Montserrat', sans-serif;
+      border-radius: 5px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 16px;
+      max-width: 40px;
+      max-height: 60px;
+    }
+
+    .end-game {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 16px;
+      height: 12vh;
+      text-align: center;
+      color: white;
+    }
+    
+    .play-again {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 10px;
+        width: 25%;
+        height: 5vh;
+        color: white;
+        font-size: clamp(14px, 1.4vw, 24px);
+        background: transparent;
+        border: solid 2px white;
+        font-family: 'Montserrat', sans-serif;
+        padding: 10px;
+        box-shadow: 1px 1px 1px 1px rgba(255,255,255,0.2);
+        margin: 50px auto;
+        animation: fadeIn 5s;
+      }
+      
+      .play-again:hover {
+        box-shadow: 1px 1px 1px 1px rgba(255,255,255,0.7);
+        font-weight: bold;
+        font-style: italic
+      } 
+    
+      .winner {
+        display: none;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 100px;
+        height: 100px;
+        flex-direction: column;
+        color: white;
+        animation: fadeIn 3s ease-in;
+        font-family: 'Montserrat', sans-serif;
+      }
+    
+      .winner h1 {
+      font-size: 16px;
+      }
+    
+      .winner p{
+        font-size: 14px;
+      } 
+    
+  }
+
+
+
+
+
+
+
+/* 
+Animation */
 
 @keyframes fadeIn {
   0% {opacity: 0;}
