--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@ body {
   height: 20vh;
   min-width: 350px;
   margin: 32px;
-  animation: fadeIn2 5s ease-in;
+  animation: fadeIn2 4s ease-in;
 }
 .music {
   display: flex;
@@ -392,17 +392,8 @@ body {
         font-size: 14px;
       }
       
-      .revealed {
-        animation: test 1s linear both;
-      }
     
   }
-
-
-
-
-
-
 
 /* 
 Animation */
@@ -418,8 +409,32 @@ Animation */
   100% {opacity: 1;}
 }
 
-@keyframes test {
-0%{-webkit-transform:scale(1) rotate3d(1,1,0,0deg);transform:scale(1) rotate3d(1,1,0,0deg)}
-50%{-webkit-transform:scale(2.5) rotate3d(1,1,0,90deg);transform:scale(2.5) rotate3d(1,1,0,90deg)}
-100%{-webkit-transform:scale(1) rotate3d(1,1,0,180deg);transform:scale(1) rotate3d(1,1,0,180deg)}
-}
+
+@keyframes shake-horizontal{
+  0%,100%{transform:translateX(0)}
+  10%,30%,50%,70%{transform:translateX(-10px)}
+  20%,40%,60%{transform:translateX(10px)}
+  80%{transform:translateX(8px)}
+  90%{transform:translateX(-8px)}}
+
+
+
+@keyframes jello-horizontal{
+  0%{transform:scale3d(1,1,1)}
+  30%{transform:scale3d(1.25,.75,1)}
+  40%{transform:scale3d(.75,1.25,1)}
+  50%{transform:scale3d(1.15,.85,1)}
+  65%{transform:scale3d(.95,1.05,1)}
+  75%{transform:scale3d(1.05,.95,1)}
+  100%{transform:scale3d(1,1,1)}}
+
+
+@keyframes bounce-top{
+  0%{transform:translateY(-45px);animation-timing-function:ease-in;opacity:1}
+  24%{opacity:1}
+  40%{transform:translateY(-24px);animation-timing-function:ease-in}
+  65%{transform:translateY(-12px);animation-timing-function:ease-in}
+  82%{transform:translateY(-6px);animation-timing-function:ease-in}
+  93%{transform:translateY(-4px);animation-timing-function:ease-in}
+  25%,55%,75%,87%{transform:translateY(0);animation-timing-function:ease-out}
+  100%{transform:translateY(0);animation-timing-function:ease-out;opacity:1}}
